discuss CmdTask and route command implementation

--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -169,29 +169,45 @@ At this point, the T1 application is ready to begin in earnest.
 
 The `CmdTask` is the task responsible for reading, parsing, and executing user commands.
 
-The majority of it's parsing logic has been ported over from past assignments (notably K4), and expanded upon with new commands.
+Specifically, it runs a very simple loop:
 
-- Trivial commands have straightforward impls (tr, rv, sw, etc...)
-- addtr - adds train to track (see docs above)
-- route - routes a train to some part of the track
+1. call the `prompt_user` UI method
+2. parse the provided input as a `Command` structure
+3. execute the requested command
 
-### Train Routing
+The `Command` parser was ported over from K4, and has been extended with new commands.
 
-- query the train's current position on the track from the oracle
-- run dijkstra's to find the shortest path
-- if no path is found, the train might have to be reversed
-    - only reverse if the train is stopped, and then re-run pathfinding
-- traverse the path (as a series of nodes) to determine which direction branches need to be switched
-- immediately flip all the branches
-- use wake_at_pos to wake the train up at the correct time to send stop command (using calibration data)
+Executing commands is done in-task, either inline, or by calling a separate method which implements the command's logic.
 
-- _kinda jank atm_, set train to speed 14 on longer routes, before dropping speed to 8 closer to the destination
+Most of the commands have fairly trivial implementations, whereby the command's arguments are marshalled to the corresponding `TrackOracle` method. e.g: the `tr` command simply calls the `TrackOracle::set_train_speed` method, etc...
+
+Instead of discussing each commands implementation, this documentation will only discuss the implementation details on non-trivial commands, namely: the `route` command.
+
+### `route` command
+
+The `route` command implements the main deliverable of T1: the ability to route a train to a specific point on the track.
+
+At a high level, this command is implemented as follows:
+
+1. Query the train's current position on the track via the `TrackOracle`
+2. Run Dijkstra's algorithm to find the shortest path from the train's current position to the specified position on the track
+    - _NOTE:_ if no path could be found, _and the train is currently stopped_, attempt to reverse the train, and re-run pathfinding.
+3. Assuming a path was found, we traverse the path (given as a series of `train_node` structures) and determine which direction each of the branches along the path should have.
+4. Switch all the branches to the correct position
+    - _See the "Future Work" section below for some discussion on how we plan to transition to a "Just in Time" model._
+5. (optionally) If the path is quite long, set the train speed to 14, and schedule a `wake_at_pos` call to slow the train down as it approaches it's destination (to speed 8)
+6. Schedule a `wake_at_pos` call to send a stop command once it's "stopping distance" away from the destination
+    - The specific stopping distance is determined using our calibration data, and varies by train
+
+In our current implementation, we treat two sensors at the same position on the track as two separate nodes, each with a different route to them. Namely, when routing to a sensor, the train will attempt to stop at the sensor "head-on", which varies by the sensor's direction.
+
+#### Known Issues
+
+- At the moment, the route command doesn't support "short" paths, namely, those where the distance to the destination node is shorter than a train's stopping distance. This is because we currently do not have a very detailed model of train acceleration and deceleration curved, which would be required to accurately "inch" a train forward towards it's destination.
 
 #### Future work
 
-- "JIT" switching of branches
-    - should be possible to implement using wake_at_pos primitive
-    - requires pre-calculating all wake_at_pos instances, as it needs to take into account the slowing down / stopping checkpoints as well
+In our architecture, it should be fairly straightfoward to flip the switches "Just in Time" by using the `wake_at_pos` primitive, whereby the task is woken up just before it hits a branch. This is complicated by the fact that these `wake_at_pos` calls need to be scheduled with respect to the `wake_at_pos` calls which slow/stop the train. Interleaving these `wake_at_pos` calls requires knowing the distance each node is along the path, which is information that is not currently returned by our pathfinding method.
 
 # Train Measurement - Collection
 
