--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -144,26 +144,50 @@ At this point, the T1 application is ready to begin in earnest.
 
 ### Implementation
 
-- under the hood, TrackOracle spawns a separate task
-- similarly to Uart and Clock, user-facing API simply provides methods which wrap Send calls to the task
-- task accepts messages, marshal requests as arguments to methods on `TrackOracleImpl`, and marshals return values back to calling task
+Under the hood, `TrackOracle` spawns a task and exposes methods that `Send()`
+to that task. As such, an actual `TrackOracle` object is very small -
+containing only the tid of the underlying task. The task runs the usual
+`Receive()` loop, which calls functions on an instance of a private class
+called `TrackOracleImpl`, which contains the actual state of the track oracle.
+Almost every function `Reply()`s immediately, the major excepting being
+`wake_at_pos`, which is expected to reply only once a train reaches a certain
+position on the track.
 
-- calibrate train implementation
-    - ask user to place train on track
-    - assume that next sensor hit is the specified train position
-    - instantiates train descriptor
+The `TrackOracle` has a method called `calibrate_train`, which is used to get
+an idea where a train is on the track. `calibrate_train` interacts with the UI,
+prompting the user to place the train on the track and press `[ENTER]` once
+done. The oracle then stops the train, and then runs it a a slow speed (speed
+level 8) until is hits a sensor. Once it does, it stops the train, and creates
+its `train_descriptor` based on the sensor it hit. With an up-to-date
+`train_descriptor`, the oracle can start reliably tracking the train's speed
+and position.
 
+Two background tasks are running continuously - one to call `tick()` on the
+track oracle at every clock tick, and one to call `update_sensors()` in a loop.
 
-- Talk about background tasks (tick, sensors)
-    - TODO: Should be move the sensor loop out of FirstUserTask? Probably not the best place for it tbh...
-- discuss sensor attribution
+`update_sensors()` runs a sensor query, which notably blocks the oracle for at
+least 70ms. If any sensors are returned, they are attributed to a train (based
+on the sensors a train is expected to hit next, given the track graph and
+positions of the switches), and the train's model is updated. Velocity is
+interpolated using an exponentially-weighted moving average that smooths out
+noise when cruising an a constant speed level. Here we also predict the next
+sensor that the train will hit, and the time at which we think we will hit it.
+If there was already a prediction for the sensor we just hit, we calculate the
+error (in terms of time and distance), and update the UI.
 
-- discuss wake_at_pos implementation
+`tick()` runs computations that should update the model every time the clock
+ticks. There are two important routines: `interpolate_acceleration` and
+`check_scheduled_wakeups`. `interpolate_acceleration` continuously updates a
+train's velocity while it is changing speed levels, by interpolating it's
+starting velocity, expected final velocity, and the time that the train has
+been accelerating. `check_scheduled_wakeups` extrapolates the position of each
+train to check if a task waiting for the train to reach a position needs to be
+woken up.
 
-
-
-
-
+This all comes together in the `wake_at_pos()` method, which puts a task to
+sleep until a certain train reaches a certain position. Through a combination
+of continuous calls to `update_sensors` and `tick`, we can hopefully wake the
+calling task at the right time.
 
 ## `CmdTask`
 
