--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -333,13 +333,23 @@ int /* ticks */ acceleration_time(uint8_t train,
 
 # Future Work
 
-- The framework is set up, and the possibilities are there. The limiting factor is time!
-    - good framework for integrating new measurements
-    - (we believe) the primitive is good
+The `TrackOracle`/`wake_at_pos` abstraction seems to be working well for us -
+our main limiting factor is time! Hopefully we can get just-in-time branch
+switching working quickly, and this will be essential for routing multiple
+trains at the same time.
 
-- refining and improving measurements
-- big code cleanup before next assignment
-    - deadlines => write-only code
-    - better separation of concerns
-    - less C, more C++ isms
-    - make the UI nicer at some point???
+If we want to collect more measurements, the pipeline of turning raw data into
+calibration code is already there, so we should be able to get new data into
+the program will relatively little effort. The hard part is the actual
+measurement.
+
+We'd definitely like to clean up some of the code. `t1.cc` is a bit of a beast,
+and it's hard to discern what belongs in `t1.cc` vs the track oracle. For
+example, both tasks have a `TrackGraph` instance, because `t1.cc` does the
+actual pathfinding, while the `TrackOracle` implements `wake_at_pos`. We should
+figure out the real abstraction boundary, and move towards it.
+
+Our UI could also use some work. We could probably turn a bunch of the noisy
+logs into fixed elements in the UI, so the log doesn't get spammed with data
+while a train is, for example, routing.
+
