give overview of TrackOracle and it's interface

--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -104,25 +104,19 @@ At this point, the T1 application is ready to begin in earnest.
 
 ## `TrackOracle`
 
-- Encapsulates all trainset I/O
-- maintains an internal representation of the track
-    - automatically queries tainset for track updates
-    - interpolates train positions
-- Does _not_ implement any high-level train control logic. instead, provides primitives for other tasks to build off of
+The `TrackOracle` is the heart-and-soul of our train controller. It is responsible for maintaining an accurate model of the physical train track, including the state of each of the switches, and the position and velocity of each train on the track. It does so by constantly polling the track for sensor data, while simultaneously trying to interpolate and approximate the position of each train on the track. To ensure consistency with the physical realm, all interactions with the track (such as setting train speeds and switching branch directions) are mediated through the `TrackOracle`.
+
+It's important to note the `TrackOracle` does _not_ implement any high-level train control logic (such as routing)! Instead, then `TrackOracle` exposes a set of primitives which other tasks in the application can use to implement complex train control logic on top of.
 
 ### Interface
 
-- exposes simple methods for
-    - setting train speed,
-    - setting train direction,
-    - switching branches
-    - querying branch state
-    - querying train status (both pre-set and extrapolated)
-- basic methods provide enough functionality to duplicate K4
-- advanced functionality requires "registering" trains with the oracle (using `calibrate_train`) method
-- also provides powerful primitive for building "smart" train tasks: `wake_at_pos`
-    - given a train ID and position on the track, blocks the task until the train hits the position on the track
-    - returns a true if the wakeup was successful, or false if the state of the track has changed such-that the train will never reach the specified position
+As expected, the `TrackOracle` provides a set of methods for performing direct manipulation on the track, such as setting train speeds/direction, and branch direction. It also exposes a query interface, whereby other tasks can query the current state of a particular branch, or the calculated current position of a train on the track.
+
+The `TrackOracle` also exposes a way to register physical trains with the internal train model: `calibrate_train`. When called, the `TrackOracle` will accelerate the specified train, and assume that the next sensor that is triggered was a result of the specified train. Once a train has been registered with the `TrackOracle`, subsequent sensor updates will be intelligently attributed to the registered trains (see the "Implementation" section for more details). If this method is _not_ called, the `TrackOracle` has no way of attributing sensor activations to a particular train!
+
+Lastly, and arguably the most interesting and "important" part of the `TrackOracle` interface is the `wake_at_pos(uint8_t train, train_pos_t pos)` primitive. Given a train ID and a position on the track, the `wake_at_pos` method blocks the calling task until the train hits the specified position on the track. If the track state changes such that the train will never reach the desired destination, the task is woken up and notified of the failure.
+
+This powerful primitive serves as the foundation for the "smart" train control algorithms implemented in the rest of our application. The "Implementation" section below discusses how this primitive is implemented, but for a proper example of how it can be used to implement higher-level train control programs, see the "`route` command" section below.
 
 ### Key data structures
 
