trackoracle data structures

--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -120,21 +120,81 @@ This powerful primitive serves as the foundation for the "smart" train control a
 
 ### Key data structures
 
-- track state:
-    - TrackGraph - static model of track
-    - branches array - dynamic track state
-        - TODO: we really aught to make the TrackGraph a non-static structure, and have it know about branch state (instead of jankilly having to pass it via it's interface. not necessarily something we need to do for this deadline, but something to keep in mind)
-    - talk about all the cool methods on it, like next/prev sensor, Dijkstra's, normalization, etc...
+The `TrackOracle` maintains an up-to-date view of the track, with the following
+fields:
 
-- train descriptors
-    - include fixed train params (id, speed)
-    - also stores computed params (velocity, last known position, expected next sensor)
+`TrackGraph track` is a static graph of the track, which does not include the
+state of the branches. The `TrackGraph` class implements a bunch of useful
+methods used by the oracle: `next_sensor` computes the next sensor that a train
+would hit after a given sensor, depending on the state of the branches.
+`prev_sensor` is also implemented. `distance_between(sensor1, sensor2,
+branches)` calculates the distance between two sensors by walking along the
+path determined by the branches. `shortest_path(sensor1, sensor2)` runs
+Dijkstra's algorithm to find the shortest possible path from `sensor1` to
+`sensor2`. `normalize(pos)` takes a `track_pos_t` (a sensor plus an offset in
+millimeters), and turns it into a another position with the smallest possibly
+positive offset. For example, `C13+1000mm` turns into `E7+125mm`.
 
-- blocked_task queue
-    - currently only supports a single task (i.e: it's just an std::optional)
-    - stores tid, train id, and position the tid should be woken up at
+`Marklin::BranchState branches[BRANCHES_LEN];` is the (mutable) state of each
+branch on the track. As branches are switched, this array is updated, affecting
+future calls to certain methods on the `track_graph`.
 
-- tick delay
+`train_descriptor_t trains[MAX_TRAINS];` contains the state for every
+calibrated trains. `train_descriptor_t` is a large type, containing fixed
+parameters (such as a train's number and speed level), and other observed
+measurements such as velocity and position. Here is the struct in its current
+form:
+
+```cpp
+struct train_descriptor_t {
+    // Fixed params
+    uint8_t id;
+    uint8_t speed;
+    bool reversed;
+    bool lights;
+
+    // Computed params
+    int velocity;
+    Marklin::track_pos_t pos;
+    int pos_observed_at;
+    int speed_changed_at;
+
+    // when the train changes speed levels, accelerating is set to true and its
+    // old speed level and velocity are remembered.
+    bool accelerating;
+    uint8_t old_speed;
+    int old_velocity;
+
+    bool has_next_sensor;
+    Marklin::sensor_t next_sensor;
+    int next_sensor_time;
+
+    bool has_error;
+    int time_error;
+    int distance_error;
+};
+```
+
+The next sensor and most recent error calcuations are also stored on the train
+descriptor.
+
+`std::optional<wakeup_t> blocked_task;` contains the task that is waiting to be
+woken up when a train reaches a certain position on the track. In the future we
+will likely extend this to a list of blocked tasks. `wakeup_t` is very simple:
+
+```cpp
+struct wakeup_t {
+    int tid;
+    uint8_t train;
+    Marklin::track_pos_t pos;
+};
+```
+
+`int max_tick_delay;` measures the maximum time observed between successive
+calls to `tick()` this is important for real-time capabilities. `tick()` needs
+to know if it might not be called again before a deadline (such as waiting to
+wake up a blocked task). If it won't it needs to block on a `Clock::Delay`
+until the deadline, and then respond in time.
 
 ### Implementation
 
