--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -8,7 +8,7 @@ _or: How we Learned to Stop Worrying and Love the Trains_
 
 Upon starting the application, the user is asked to enter which track the application is running on (either A or B).
 
-After a brief initialization procedure, the display should look something similar to the following (albeit with more color).
+After a brief initialization procedure, the display should look something similar to the following (albeit with a little more color).
 
 ```
 CPU Usage (03%) _______________________________________________________________________________
@@ -47,9 +47,9 @@ max tick delay updated to 16 ticks
 The display consists of the following components:
 
 - A constantly updating readout of the system's CPU utilization, with a time-series graph showing past values using Unicode block chars
-- A status readout for each train registered with the system
+- A status readout for each of the trains currently registered with the application
 - A command prompt
-- A scrollable region which displays program output and logging information
+- A scrollable region to display program output and debug logs
 
 The system supports the following commands:
 
@@ -75,22 +75,31 @@ Command                  | Description
 
 ## UI
 
-Instead of using raw calls to Uart::{Putc,Putstr,Printf}, we've modularized our UI calls into a dedicated UI module, which provides methods and macros for outputting data to the screen in a structured and orderly fashion. Some of the methods and macros the UI module exposes include:
+Instead of using raw calls to `Uart::{Putc,Putstr,Printf}`, we've modularized our UI calls into a dedicated UI module, which provides methods and macros for outputting data to the screen in a structured and orderly fashion. Some of the methods and macros the UI module exposes include:
 
 - `log_line`, `log_success`, `log_warning`, `log_error`, etc...
-    - `printf`-like macros which display colored output to the UI's log
+    - `printf`-like macros which display appropriately colored output to the logging area
 - `prompt_user(int uart, char* buf, size_t len)`
-    - Responsible for drawing the command prompt, and accepting user input.
+    - Responsible for drawing the command prompt, and waiting for user input.
 - `render_train_descriptor(int uart, const train_descriptor_t& td)`
-    - Renders a readout of a particular train's state given it's train descriptor
+    - Renders a readout of a particular train's state
+    - Includes information about:
+[ 6797] train=58 spd=14 vel= 891mm/s pos=C14 ofst=0mm next=(A04 at t= 6862) error=-0.05s/-44mm
+        - Last observed timestamp
+        - Speed
+        - Assumed velocity
+        - Last known position
+        - Expected next sensor + time to reach said sensor
+        - Last recorded position error
 - `void render_initial_screen(int uart, const TermSize& term_size);`
-    - Renders any static UI elements which will not change throughout the program's lifetime
+    - Renders any static UI elements which do not change throughout the program's lifetime
+        - e.g: the lines separating the command prompt for the logging area / train descriptors
     - Uses terminal dimensions to lay out UI elements
         - Dimensions are determined using a VT100 cursor position query
 
 ## Initialization
 
-The `FirstUserTask` starts off by executing various mundane, program-agnostic setup routines:
+The `FirstUserTask` begins by executing various mundane, program-agnostic setup routines:
 - Spawning the Uart and Clock servers
 - Clearing the terminal, and querying it's dimensions
 - Spawning the CPU Idle Time task
@@ -104,7 +113,7 @@ At this point, the T1 application is ready to begin in earnest.
 
 ## `TrackOracle`
 
-The `TrackOracle` is the heart-and-soul of our train controller. It is responsible for maintaining an accurate model of the physical train track, including the state of each of the switches, and the position and velocity of each train on the track. It does so by constantly polling the track for sensor data, while simultaneously trying to interpolate and approximate the position of each train on the track. To ensure consistency with the physical realm, all interactions with the track (such as setting train speeds and switching branch directions) are mediated through the `TrackOracle`.
+The `TrackOracle` is the heart-and-soul of the train control program. It is responsible for maintaining an accurate model of the physical train track, including the state of each of the switches, and the position and velocity of each train on the track. It does so by constantly polling the track for sensor data, while simultaneously trying to interpolate and approximate the position of each train on the track. To ensure consistency with the physical realm, all interactions with the track (such as setting train speeds and switching branch directions) are mediated through the `TrackOracle`.
 
 It's important to note the `TrackOracle` does _not_ implement any high-level train control logic (such as routing)! Instead, then `TrackOracle` exposes a set of primitives which other tasks in the application can use to implement complex train control logic on top of.
 
@@ -175,7 +184,7 @@ struct train_descriptor_t {
 };
 ```
 
-The next sensor and most recent error calcuations are also stored on the train
+The next sensor and most recent error calculations are also stored on the train
 descriptor.
 
 `std::optional<wakeup_t> blocked_task;` contains the task that is waiting to be
@@ -240,8 +249,8 @@ woken up.
 
 This all comes together in the `wake_at_pos()` method, which puts a task to
 sleep until a certain train reaches a certain position. Through a combination
-of continuous calls to `update_sensors` and `tick`, we can hopefully wake the
-calling task at the right time.
+of continuous calls to `update_sensors` and `tick`, we wake the calling task
+almost exactly when it expects to be woken up.
 
 ## `CmdTask`
 
@@ -348,8 +357,6 @@ added to the outputted measurements. This way, is the user is attentive, they
 can press a key as soon as they see the train reach a stop, giving a decent
 measurement for stopping time.
 
-We measured stopping distance for every train at speeds 14 and 8.
-
 # Train Measurement - Analysis and Integration
 
 We wrote a python script (the aptly named `process.py`) to process the raw
@@ -406,4 +413,3 @@ figure out the real abstraction boundary, and move towards it.
 Our UI could also use some work. We could probably turn a bunch of the noisy
 logs into fixed elements in the UI, so the log doesn't get spammed with data
 while a train is, for example, routing.
-
